--- a/index.html
+++ b/index.html
@@ -218,6 +218,15 @@
     <input type="text" id="studentName" placeholder="Enter your name" required>
     <br>
     <button onclick="startExam()">Start Exam</button>
+    <div style="margin: 20px auto; padding: 15px; border: 2px solid #1a237e; border-radius: 8px; 
+            background: linear-gradient(to right, #1a237e, #3949ab); max-width: 400px; 
+            box-shadow: 2px 2px 10px rgba(0,0,0,0.1);">
+    <h3 style="margin-top: 0; text-align: center; color: #ffffff; text-decoration: underline;">Instructions</h3>
+    <ul style="margin: 10px 0 0 20px; color: #ffffff; font-weight: bold; text-align: left;">
+        <li>Do not switch window during the exam.</li>
+        <li>Any errors or issues, contact faculty immediately.</li>
+    </ul>
+</div>
   </div>
 
   <!-- Exam Screen -->
@@ -351,3 +360,4 @@
 
 </body>
 </html>
+
