--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 
   <!-- Start Screen -->
   <div id="startScreen" class="start-screen">
+    <img src="https://www.unitedwaymumbai.org/ngo_logos/69_logo.gif" alt="Logo" style="height:80px; margin-bottom:20px;">
     <h2>WELCOME TO VIDYA ADVANCE EXCEL MOCK TEST</h2>
     <p>Enter your full name to begin the test:</p>
     <input type="text" id="studentName" placeholder="Enter your name" required>
@@ -221,12 +222,12 @@
     <div style="margin: 20px auto; padding: 15px; border: 2px solid #1a237e; border-radius: 8px; 
             background: linear-gradient(to right, #1a237e, #3949ab); max-width: 400px; 
             box-shadow: 2px 2px 10px rgba(0,0,0,0.1);">
-    <h3 style="margin-top: 0; text-align: center; color: #ffffff; text-decoration: underline;">Instructions</h3>
-    <ul style="margin: 10px 0 0 20px; color: #ffffff; font-weight: bold; text-align: left;">
+      <h3 style="margin-top: 0; text-align: center; color: #ffffff; text-decoration: underline;">Instructions</h3>
+      <ul style="margin: 10px 0 0 20px; color: #ffffff; font-weight: bold; text-align: left;">
         <li>Do not switch window during the exam.</li>
         <li>Any errors or issues, contact faculty immediately.</li>
-    </ul>
-</div>
+      </ul>
+    </div>
   </div>
 
   <!-- Exam Screen -->
@@ -360,4 +361,6 @@
 
 </body>
 </html>
+
+
 
